--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      node-version: [8.x, 10.x, 12.x]
+      node-version: [8.x, 10.x]
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
