--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-files": "^1.4.0",
-    "eslint": "^4.18.2",
-    "gulp-imagemin": ">= 3.1.0 <7.0.0",
+    "eslint": "^6.5.1",
+    "gulp-imagemin": "^6.0.0",
     "mocha": "^6.2.1",
     "mocha-junit-reporter": "^1.23.1",
     "nyc": "^14.1.1",
