--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -21,6 +21,11 @@ jobs:
         env:
           CI: true
       - name: Run Tests
-        run: npm test
+        run: "npx nyc --reporter=clover npm run test:unit"
         env:
           CI: true
+      - name: Send coverage information to Codecov
+        uses: codecov/codecov-action@v1.0.3
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          file: ./coverage/clover.xml
