--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           CI: true
       - name: Upload coverage
-        if: success() && matrix.node-version == 10.x'
+        if: success() && matrix.node-version == '10.x'
         run: bash <(curl -s https://codecov.io/bash) -v -t $TOKEN -B $BRANCH -C $SHA -f ./coverage/clover.xml
         env:
           TOKEN: "${{ secrets.CODECOV_TOKEN }}"
