--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,11 +8,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+        uses: actions/checkout@v4
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
         with:
-          node-version: 16.x
+          node-version: 20.x
+      - name: Install Dependencies
+        run: npm ci
+        env:
+          CI: true
+      - name: Run Tests
+        run: npm test
+        env:
+          CI: true
       - name: Release to NPM
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
