--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "author": "Rob Bayliss <rob@lastcallmedia.com>",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-files": "^1.4.0",
