--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,25 +1,30 @@
 name: Release
 on:
   push:
-    tags: ['*']
+    tags:
+      - 'v*'
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-      - name: Release to NPM
-        run: |
-          npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
-          echo "The version is: ${REF:10}"
-          npm version --no-git-tag-version ${REF:10}
-          npm publish
-        env:
-          CI: true
-          NPM_TOKEN: ${{ secrets.NPM_REGISTRY_TOKEN }}
-          REF: ${{ github.ref }}
+          node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
+
+      # Ensure npm 11.5.1 or later is installed
+      - name: Update npm
+        run: npm install -g npm@latest
+      
+      - run: npm ci
+      
+      - run: npm run build --if-present
+      - run: npm test
+      - run: npm publish
